after running bower install, npm install generate some table, code, ui ignore bower dir

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -158,6 +158,9 @@
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tab.js"></script>
+        <script src="scripts/foo/router_foo.js"></script>
+        <script src="scripts/foo/controller_foo.js"></script>
+        <script src="scripts/foo/service_foo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
